--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
 title: Traditional food
 #logo
 description: Food shop|Food delivery
+
+title: Working hours
+description: Monday to Sunday
+10am to 10pm
 theme: jekyll-theme-minimal
  
