--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ description: Food shop|Food delivery
 
 title: Working hours
 description: Monday to Sunday
-10am to 10pm
+description: 10am to 10pm
 theme: jekyll-theme-minimal
  
