--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,13 @@
 title: Traditional food
 #logo
-description: Food shop|Food delivery
+description: Food shop|Food delivery  
+
+title: My Site
+theme: minima
+
+header_pages:
+  - branches.html
+
+
 theme: jekyll-theme-minimal
 show_downloads: false
